prusti-tests/tests/verify/ui/warnings.stderr
error: it is not allowed to use the keyword `result` as a function argument
 --> $DIR/warnings.rs:7:8
  |
7 | fn foo(result: u32) -> u32 {
  |        ^^^^^^^^^^^

error: aborting due to previous error

